--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-input, textarea {
+input, textarea, select {
     @apply border-2 border-gray-300 rounded-md px-1 w-full mb-2;
 }
 
